--- a/styles/game.css
+++ b/styles/game.css
@@ -1,33 +1,25 @@
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Cinzel", Spongeboy Me Bob;
   text-align: center;
-  background: radial-gradient(
-    circle,
-    rgba(20, 20, 30, 1) 20%,
-    rgba(10, 10, 20, 1) 80%
-  );
+  background: black;
   background-image: url("/images/background-game.jpg");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  color: #c0c0c0;
+  color:#000000;
   margin: 0;
   padding: 0;
 }
 
-.container {
-  margin-top: 50px;
-}
-
 h1 {
   font-size: 2.5em;
-  text-shadow: 2px 2px 10px rgba(138, 43, 226, 0.6);
-  color: #ddd;
-  background: linear-gradient(135deg, #4b0082, #2e1a47);
+  text-shadow: 2px 2px 10px rgba(255, 255, 255, 0.988);
+  color: #000000;
+  background: linear-gradient(135deg, #ffff00, #ff0090);
   padding: 10px 25px;
   border-radius: 10px;
   display: inline-block;
-  box-shadow: 0 0 15px rgba(75, 0, 130, 0.6);
+  box-shadow: 0 0 15px #ffff00;
 }
 
 .game-board {
@@ -39,13 +31,13 @@ h1 {
   padding: 20px;
   background: rgba(0, 0, 0, 0.5);
   border-radius: 15px;
-  box-shadow: 0 4px 15px rgba(138, 43, 226, 0.8);
+  box-shadow: 0 4px 15px #ffff00;
 }
 
 .card {
   width: 160px;
   height: 160px;
-  background: #121212;
+  background: linear-gradient(135deg, #ffff00, #ff0090);
   border-radius: 10px;
   display: flex;
   align-items: center;
@@ -53,14 +45,15 @@ h1 {
   cursor: pointer;
   position: relative;
   transition: transform 0.3s, box-shadow 0.3s;
-  box-shadow: 0 0 10px rgba(138, 43, 226, 0.7);
+  box-shadow: 0 0 10px #ffff00;
   transform-style: preserve-3d;
   transition: transform 0.5s ease-in-out;
 }
 
 .card:hover {
   transform: scale(1.1);
-  box-shadow: 0 0 20px rgba(138, 43, 226, 1);
+  background: white;
+  box-shadow: 0 0 20px #ffff00;
 }
 
 .card img {
@@ -89,6 +82,7 @@ h1 {
 p {
   font-size: 1.2em;
   font-weight: bold;
+  color: rgb(255, 255, 255);
   background: rgba(0, 0, 0, 0.6);
   padding: 10px;
   border-radius: 10px;
@@ -97,21 +91,22 @@ p {
 
 button {
   font-size: 1.2em;
+  font-family: "Cinzel", Spongeboy Me Bob;
   /* background: #8a2be2; */
   border: none;
   padding: 10px 20px;
   border-radius: 10px;
   cursor: pointer;
   transition: 0.3s;
-  box-shadow: 0 0 10px rgba(138, 43, 226, 0.7);
-  color: white;
-  background: linear-gradient(135deg, #8a2be2, #4b0082);
+  box-shadow: 0 0 10px rgba(191, 255, 0, 0.7);
+  color: rgb(0, 0, 0);
+  background: linear-gradient(135deg, #ffff00, #ff00c8);
 }
 
 button:hover {
-  background: #6a1bbf;
+  background: #ffff00;
   transform: scale(1.1);
-  box-shadow: 0 0 20px rgba(138, 43, 226, 1);
+  box-shadow: 0 0 20px #ffff00;
 }
 
 .card.matched {
