--- a/styles/score.css
+++ b/styles/score.css
@@ -1,12 +1,16 @@
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Cinzel", Spongeboy Me Bob;
   text-align: center;
   background: radial-gradient(
     circle,
     rgba(20, 20, 30, 1) 20%,
     rgba(10, 10, 20, 1) 80%
   );
-  color: #c0c0c0;
+  background-image: url("/images/background-score.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  color:#000000;
   margin: 0;
   padding: 0;
 }
@@ -17,8 +21,8 @@ body {
 
 h1 {
   font-size: 2.5em;
-  color: #ddd;
-  text-shadow: 2px 2px 10px rgba(138, 43, 226, 0.6);
+  color: #ffff00;
+  text-shadow: 2px 2px 10px #ffff00;
 }
 
 ol {
@@ -28,26 +32,28 @@ ol {
 
 ol li {
   font-size: 1.5em;
-  background: rgba(138, 43, 226, 0.7);
+  background:  #ffff00;
   padding: 10px;
   border-radius: 10px;
   margin: 10px auto;
-  width: 50%;
-  box-shadow: 0 0 10px rgba(138, 43, 226, 0.7);
+  width: 30%;
+  box-shadow: 0 0 10px  #ffff00;
 }
 
 button {
   font-size: 1.2em;
-  background: #8a2be2;
+  font-family: "Cinzel", Spongeboy Me Bob;
+  background: linear-gradient(45deg, #fffb00, #ff007b);
   border: none;
   padding: 10px 20px;
   border-radius: 10px;
   cursor: pointer;
   transition: 0.3s;
-  color: white;
+  color: #000000;
+  box-shadow: 0 0 10px #ffff00;
 }
 
 button:hover {
-  background: #6a1bbf;
+  background: #ffff00;
   transform: scale(1.1);
 }
