--- a/styles/score.css
+++ b/styles/score.css
@@ -22,7 +22,7 @@ body {
 h1 {
   font-size: 2.5em;
   color: #ffff00;
-  text-shadow: 2px 2px 10px #ffff00;
+  text-shadow: 2px 2px 10px #ffff00; 
 }
 
 ol {
@@ -32,8 +32,8 @@ ol {
 
 ol li {
   font-size: 1.5em;
-  background:  #ffff00;
-  padding: 10px;
+  background:  #ffff00d1;
+  padding: 15px;
   border-radius: 10px;
   margin: 10px auto;
   width: 30%;
