--- a/styles/game.css
+++ b/styles/game.css
@@ -6,7 +6,7 @@ body {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  color:#000000;
+  color: #000000;
   margin: 0;
   padding: 0;
 }
@@ -114,4 +114,53 @@ button:hover {
 .card.matched {
   box-shadow: 0 0 20px rgba(0, 255, 0, 0.8);
   transform: scale(1.05);
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background: rgba(255, 255, 255, 0.9);
+  padding: 20px;
+  text-align: center;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.5);
+  width: 300px;
+}
+
+input {
+  width: 90%;
+  padding: 8px;
+  margin: 10px 0;
+  border: 2px solid #ff00c8;
+  border-radius: 5px;
+  text-align: center;
+}
+
+button {
+  font-size: 1.2em;
+  font-family: "Cinzel", Spongeboy Me Bob;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 0.3s;
+  box-shadow: 0 0 10px rgba(191, 255, 0, 0.7);
+  color: rgb(0, 0, 0);
+  background: linear-gradient(135deg, #ffff00, #ff00c8);
+}
+
+button:hover {
+  background: #ffff00;
+  transform: scale(1.1);
+  box-shadow: 0 0 20px #ffff00;
 }
