--- a/styles/score.css
+++ b/styles/score.css
@@ -20,7 +20,7 @@ body {
 }
 
 h1 {
-  font-size: 2.5em;
+  font-size: 4em;
   color: #ffff00;
   text-shadow: 2px 2px 10px #ffff00;
 }
@@ -30,15 +30,17 @@ ol {
   padding: 0;
 }
 
+
 ol li {
   font-size: 1.5em;
   background: #ffff00d1;
   padding: 15px;
-  border-radius: 10px;
-  margin: 10px auto;
+  border-radius: 10x;
+  margin: 15px auto;
   display: inline-block; /* Background mengikuti ukuran teks */
   box-shadow: 0 0 10px #ffff00;
   white-space: nowrap; /* Mencegah teks turun ke bawah */
+  text-align: center;
 }
 
 button {
@@ -46,12 +48,13 @@ button {
   font-family: "Cinzel", Spongeboy Me Bob;
   background: linear-gradient(45deg, #fffb00, #ff007b);
   border: none;
-  padding: 10px 20px;
+  padding: 15px 20px;
   border-radius: 10px;
   cursor: pointer;
   transition: 0.3s;
   color: #000000;
   box-shadow: 0 0 10px #ffff00;
+  margin-top: 20px;
 }
 
 button:hover {
