--- a/styles/score.css
+++ b/styles/score.css
@@ -6,7 +6,7 @@ body {
     rgba(20, 20, 30, 1) 20%,
     rgba(10, 10, 20, 1) 80%
   );
-  background-image: url("/images/background-score.jpg");
+  background-image: url("../images/background-score.jpg");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -29,7 +29,6 @@ ol {
   list-style: none;
   padding: 0;
 }
-
 
 ol li {
   font-size: 1.5em;
@@ -70,6 +69,8 @@ button:hover {
 }
 
 #leaderboard li {
+  text-align: center; /* Agar teks di dalam li rata tengah */
+  width: 100%; /* Memastikan teks berada di tengah */
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -77,6 +78,23 @@ button:hover {
   padding: 8px 15px;
   border-bottom: 1px solid #ccc;
   white-space: nowrap; /* Mencegah teks turun ke bawah */
+}
+
+#leaderboard li.empty-score {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.empty-score {
+  text-align: center;
+  font-size: 1.5em;
+  font-weight: bold;
+  color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
 .rank {
